@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
skinparam linetype ortho
skinparam packageStyle rectangle
skinparam class {
  BackgroundColor #F8FAFC
  BorderColor #334155
  ArrowColor #475569
}
skinparam interface {
  BackgroundColor #EFF6FF
  BorderColor #2563EB
}
title SimpleRAG - MVC 模式（语义检索页面）
left to right direction

package "View" {
  class SearchPanel <<View>> {
    -results : DefaultListModel<SearchResultView>
    -query : JTextField
    -resultList : JList<SearchResultView>
    +query() : String
    +extension() : String
    +selected() : SearchResultView
    +searching() : void
    +results(values : List<SearchResultView>) : void
    +preview(result : SearchResultView) : void
    +searchFailed() : void
  }
}

package "Controller" {
  class DesktopWorkspaceController <<Controller>> {
    -searchPanel : SearchPanel
    -search : SearchController
    -performSearch() : void
    -setPreview(result : SearchResultView) : void
    -locateSemanticMatches(result : SearchResultView) : void
  }

  class SearchController <<Presentation Controller>> {
    -search : SearchKnowledge
    +search(identity, query, limit, extension) : List<SearchResultView>
    +highlights(identity, query, document, limit) : List<SemanticHighlight>
  }
}

package "Model / Application" {
  interface SearchKnowledge <<Input Port>> {
    +search(knowledgeBaseId, expectedRevision, query, limit, extension) : List<SearchResultView>
    +semanticHighlights(knowledgeBaseId, expectedRevision, query, document, limit) : List<SemanticHighlight>
  }

  class SearchUseCase <<Model>> {
    -runtime : ActiveKnowledgeRuntime
    +search(...) : List<SearchResultView>
    +semanticHighlights(...) : List<SemanticHighlight>
  }

  class SearchResultView <<DTO>> {
    +document : DocumentReference
    +score : double
    +reason : String
  }
}

DesktopWorkspaceController *-- SearchPanel : owns and updates
SearchPanel ..> DesktopWorkspaceController : UI callbacks
DesktopWorkspaceController *-- SearchController
SearchController --> SearchKnowledge : invokes
SearchUseCase ..|> SearchKnowledge
SearchUseCase ..> SearchResultView : creates
SearchPanel "1" o-- "0..*" SearchResultView : renders
DesktopWorkspaceController ..> SearchResultView : coordinates

legend bottom
  <|..  interface realization
  *--   composition
  o--   aggregation
  ..>   dependency / callback
endlegend
@enduml
